# game-project

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  SetupLib.cmake
.github/: FUNDING.yml
cmake/: BGFXCompileShaders.cmake  BGFXShader.cmake  ComponentList.cmake  FileUtils.cmake  SetupLib.cmake  Utils.cmake  Ω_BGFXCompileShaders.cmake
cmake/setuplib/bgfx_imgui/: imgui_impl_bgfx.cpp
engine/: CMakeLists.txt  Engine.h_  MrManager.cpp  MrManager.h  engine.h  main_desktop.cpp
engine/animation/: Animator.cpp  Animator.h  ease.h
engine/common/: AABB.h  Event.h  EventQueue.h  InputQueue.h  InputSys.cpp  InputSys.h  KeyedPool.h  MemSys.h  MemorySystem.h  Number.h  Path.h  Rect.h  UniColor.h  bgfx_extra.h  code_timer.h  codetimer.h  debug_defines.h  endian.h  file_utils.h  gl_extra.h  glfw.h  modp_b64.cc  modp_b64.h  modp_b64_data.h  platform.h  platform.mm  stb.cpp  stb.h  string_utils.cpp  string_utils.h  types.h  utils.h
engine/common/imgui_bgfx/: imgui_bgfx.cpp  imgui_bgfx.h
engine/common/imgui_bgfx_glfw/: imgui_bgfx_glfw.cpp  imgui_bgfx_glfw.h  imgui_bgfx_glfw_2.cpp  imgui_bgfx_glfw_2.h  imgui_impl_glfw.cpp  imgui_utils.h
engine/dev/: DevOverlay.h  Editor.cpp  Editor.h  OriginWidget.cpp  OriginWidget.h  print.cpp  print.h
engine/memory/: Array.h  Array_Editor.cpp  BitArray.h  CharKeys.cpp  CharKeys.h  CharKeys_Editor.cpp  Entity.cpp  Entity.h  FSA.cpp  FSA.h  FSA_Editor.cpp  File.cpp  File.h  File_Editor.cpp  FrameStack.h  FreeList.cpp  FreeList.h  FreeList_Editor.cpp  GLTF.cpp  GLTF.h  GLTFLoader.cpp  GLTFLoader.h  GLTFLoader2.cpp  GLTFLoader2.h  GLTFLoader3.cpp  GLTFLoader3.h  GLTFLoader4.cpp  GLTFLoader4.h  GLTFSizeFinder.h  GObj.h  Gobj.cpp  Gobj.h  Gobj_Editor.cpp  MemMan.cpp  MemMan.h  MemMan2.cpp  MemMan2.h  MemMan2_Editor.cpp  MemMan_Block.cpp  MemMan_BlockInfo.cpp  (+19 more)
engine/memory/Ω_unsued/: GLTFLoader3.h  Ω_GLTFLoader2.cpp  Ω_GLTFLoader2.h  Ω_GLTFLoader3.cpp  Ω_GLTFSizeFinder.h  Ω_JSONPrinter.h
engine/primitives/: Cube.h  Pyramid.h  Quad.h  gobj_utils.h
engine/primitives/Ω_unused/: Quad.h  Ω_Cube.h
engine/render/: Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  Colors.h  Fog.h  GLTFLoader.cpp  GLTFLoader.h  Image.h  Lights.h  Mesh.h  RenderSettings.h  RenderSystem.cpp  RenderSystem.h  RenderSystem2.cpp  RenderSystem2.h  Renderable.h  Renderable2.h  Samplers.h  Texture.h  bgfx_extra.h
engine/render/Ω_unused/: Ω_Image.h  Ω_Mesh.h  Ω_Renderable.h  Ω_Renderable2.h
engine/shader/: engine.h  shared_defines.h  utils.sh
engine/shader/shaders/gltf/: VertGLTF.h  fs_gltf.sc  varying.def.sc
engine/shader/shaders/standard/: VertStandard.h  fs_standard.sc  varying.def.sc
engine/shader/shaders/unlit/: VertUnlit.h  fs_unlit.sc  vs_unlit.sc
engine/worker/: Worker.cpp  Worker.h
src/: MrManager.h  main.cpp
src/animation/: Animator.cpp  Animator.h
src/common/: InputSys.cpp  InputSys.h  KeyMap.h  Memory.h  MemorySystem.h  TwoIntKey.h  UniColor.h  bgfx_extra.h  glfw_extra.h  types.h  utils.h
src/components/: @list.h  Info.h  Mesh.h  NewMesh.h  NewRenderable.h  Sample.h  _list.h  all.h  all.h.in
src/dev/: DevOverlay.h  print.cpp  print.h
src/develop/: DebugOverlay.h  DevOverlay.h  Editor.cpp  Editor.h  print.cpp  print.h
src/editor/: Editor.cpp
src/render/: Camera.cpp  Camera.h  Colors.h  GLTFLoader.cpp  GLTFLoader.h  GLTFRenderable.cpp  GLTFRenderable.h  Mesh.h  PosColorVertex.h  Primitive.h  RenderManager.cpp  RenderManager.h  RenderSystem.cpp  RenderSystem.h  Renderable.cpp  Renderable.h  TestQuad.cpp  TestQuad.h  TestQuadSystem.cpp  TestQuadSystem.h  Tester.cpp  Tester.h
src/shader/shaders/gltf/: fs_gltf.sc  varying.def.sc  vs_gltf.sc
src/shader/shaders/main/: fs_main.sc
src/shader/shaders/tester/: fs_tester.sc  varying.def.sc  vs_tester.sc
src/shaders/main/: varying.def.sc  vs_main.sc
Ω_unused/engine/memory/Ω_unsued/: Ω_GLTFLoader3.cpp
Ω_unused/engine/primitives/Ω_unused/: Ω_Pyramid.h
Ω_unused/engine/render/Ω_unused/: Ω_GLTFLoader.h  Ω_Material.h  Ω_Mesh.cpp
